<resources>
    <string name="app_name">SkySnap</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_description">Get to know your weather maps \nand perception forecast</string>
    <string name="get_started">Get Started</string>
    <string name="wind_image">Wind Image</string>
    <string name="humidity_image">Humidity Image</string>
    <string name="rain_image">Rain Image</string>
    <string name="today">Today</string>
    <string name="_7_days">7 Days</string>
    <string name="other_cities">Other Cities</string>
    <string name="degree">%1$s °C</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
</resources>