<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GetStartedActivity"
    android:background="@drawable/app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sun_cloud" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/weather_forecast"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center_horizontal"
            android:text="@string/weather_description"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>