<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/app_bg"
    android:padding="16dp">

        <!-- Current Weather Section -->

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Mostly Sunny"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
            android:id="@+id/tempContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCondition">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|end"
                android:alpha="0.7"
                android:contentDescription="Weather Image"
                android:src="@drawable/app_logo" />

            <TextView
                android:id="@+id/temperatureTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23°"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="120sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday, 05 July | 09:15 AM"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tempContainer" />

        <!-- Weather Details Card -->
        <LinearLayout
            android:id="@+id/weatherDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_card_rounded"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvDate">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/rain_image"
                    android:src="@drawable/ic_rain" />

                <TextView
                    android:id="@+id/cloudCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30%"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_semi_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cloud"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/humidity_image"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20%"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_semi_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/wind_image"
                    android:src="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10km/h"
                    android:textSize="16dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_semi_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind Speed"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_light"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Hourly Forecast Section -->
        <TextView
            android:id="@+id/tvTodayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/today"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherDetailsCard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_days"
            android:textColor="@android:color/white"
            app:drawableRightCompat="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="@id/tvTodayLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableTint="@color/white"
            app:layout_constraintTop_toTopOf="@id/tvTodayLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourlyScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvTodayLabel"/>

        <!-- Other Cities Section -->
        <TextView
            android:id="@+id/tvCitiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/other_cities"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hourlyScroll" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@id/tvCitiesLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCitiesLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cityItemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvCitiesLabel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>